@@ -1,3 +1,0 @@
-Site URL: https://latestporn.co/
-Contact: https://latestporn.co/contact/
-DMCA: https://latestporn.co/dmca/
